# jmp-backbone

./: MANIFEST.in  README.md  pyproject.toml
configs/mptrj_alex_omat24/: jmp-l-debug.py  jmp-l-fungcluster.py  jmp-l-lowmem.py  jmp-l.py  jmp-s-continue-1028-fungcluster.py  jmp-s-continue-11_1-fungcluster.py  jmp-s-continue-fungcluster.py  jmp-s-finetune-116-continue-119.py  jmp-s-finetune-116.py  jmp-s-finetune.py  jmp-s-fungcluster.py  jmp-s-restart-11_6-fungcluster-continue-119.py  jmp-s-restart-11_6-fungcluster.py  jmp-s.ipynb  jmp-s.py
notebooks/: 10-27-salex-stress-validation-v2.ipynb  10-30-mptrj-stress-validation.ipynb  alex_og.ipynb  checkpoint_loading.ipynb  data.ipynb  energy_visualization.ipynb  omat24.ipynb  relax-metrics.ipynb  relax-test.ipynb  relax-test.py  stress-units.ipynb  stress_visualization.ipynb  tsne copy.ipynb  tsne-all.py  tsne-both.ipynb  tsne-wbm copy.ipynb  tsne-wbm.ipynb  tsne.ipynb
notebooks/paper-figures/: distributions-all-to-ase.ipynb  distributions-all-v2-nunique.ipynb  distributions-all-v2.ipynb  distributions-all-v3.ipynb  distributions-all.ipynb  mptrj-distributions.ipynb  tsne-both.ipynb
scripts/: download-datasets.py
src/jmp/: __init__.py  lightning_datamodule.py  lightning_module.py  linref.py  loss.py  metrics.py  referencing.py  types.py
src/jmp/config/: __init__.py
src/jmp/config/lightning_datamodule/: __init__.py
src/jmp/config/lightning_module/: __init__.py
src/jmp/config/referencing/: __init__.py
src/jmp/configs/: __init__.py
src/jmp/configs/lightning_datamodule/: __init__.py
src/jmp/configs/lightning_module/: __init__.py
src/jmp/configs/models/: __init__.py
src/jmp/nn/: base.py  energy_head.py  force_head.py  graph_scaler.py  stress_head.py
src/jmp/relaxation/: ase_utils.py  calculator.py  dataset_relaxer.py  ml_relaxation.py  wbm.py
(+50 files in other folders)
